force-app/main/default/objects/AutomationByPass__mdt/AutomationByPass__mdt.object-meta.xml
<CustomObject>
    <description>Store Object Name and boolean to turn off Apex Trigger or Flow</description>
    <label>Automation ByPass</label>
    <pluralLabel>Automation ByPasses</pluralLabel>
</CustomObject>