force-app/main/default/objects/AutomationByPass__mdt/fields/ApexTriggersEnabled__c.field-meta.xml
<CustomField>
    <fullName>ApexTriggersEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are Apex Triggers Enabled for the Object? True for yes, False for No</description>
    <label>Apex Triggers Enabled</label>
    <type>Checkbox</type>
</CustomField>