force-app/main/default/objects/AutomationByPass__mdt/fields/FlowsEnabled__c.field-meta.xml
<CustomField>
    <fullName>FlowsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are Flows Enabled for the Object? True for yes, False for No</description>
    <label>Flows Enabled</label>
    <type>Checkbox</type>
</CustomField>