force-app/main/default/objects/AutomationByPass__mdt/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>The API Name of the Object</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>