force-app/main/default/objects/AutomationByPass__mdt/fields/ValidationRulesEnabled__c.field-meta.xml
<CustomField>
    <fullName>ValidationRulesEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are Validation Rules Enabled for the Object? True for yes, False for No</description>
    <label>Validation Rules Enabled</label>
    <type>Checkbox</type>
</CustomField>